collapse css, v-autocomplete, posted company and user fix

--- a/src/assets/scss/base/base.scss
+++ b/src/assets/scss/base/base.scss
@@ -15,7 +15,7 @@
   text-decoration: none !important;
   border-bottom: 1px solid;
   position:relative;
-  z-index: 999;
+  z-index: 99999;
 }
 
 .malicious-icon {
